--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         Tu navegador no soporta el elemento de audio.
     </audio>
 
-    <button id="btnPlay" style="position: absolute; top: 20px; left: 20px;">Reproducir Música</button>
+    <button id="btnPlay" style="position: absolute; top: 20px; left: 20px; background-color: pink; border: none; padding: 10px; border-radius: 10px; cursor: pointer; font-size: 16px;">💖 Reproducir Música 💖</button>
 
     <script>
         function crearCorazon() {
